--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -1,10 +1,12 @@
 - name: Create kafka user
+  become: true
   ansible.builtin.user:
     name: kafka
     groups: sudo
     append: true
 
 - name: Make kafka user sudo without pwd
+  become: true
   copy:
     dest: /etc/sudoers.d/80-ansible-sudo-user
     content: "kafka ALL=(ALL) NOPASSWD:ALL"
