--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -1,4 +1,5 @@
 - name: Create unit file for Zookeper
+  become: true
   template:
     src: zookeper.service.j2
     dest: /lib/systemd/system/zookeper.service
