--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -41,7 +41,7 @@
   # become_method: su
   ansible.builtin.get_url:
     url: https://archive.apache.org/dist/kafka/3.4.0/kafka_2.12-3.4.0.tgz 
-    dest: /tmp/kafka.tgz
+    dest: /home/ivan/kafka.tgz
 
 - name: Unarchive kafka
   become: true
@@ -50,12 +50,12 @@
   ansible.builtin.unarchive:
     remote_src: true
     src: /tmp/kafka.tgz
-    dest: /etc/
+    dest: /home/ivan/
 
 - name: Remove archive
   become: true
   # become_user: kafka
   # become_method: su
   ansible.builtin.file:
-    path: /tmp/kafka.tgz
+    path: /home/ivan/kafka.tgz
     state: absent
