--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -49,7 +49,7 @@
   # become_method: su
   ansible.builtin.unarchive:
     remote_src: true
-    src: /tmp/kafka.tgz
+    src: /home/ivan/kafka.tgz
     dest: /home/ivan/
 
 - name: Remove archive
