Add daemon-reload task

--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -13,4 +13,8 @@
     - { file: '/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-start.sh', mod: '744'}
     - { file: '/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-stop.sh', mod: '744' }
     - { file: '/etc/systemd/system/zookeper.service', mod: '644'}
+
+- name: Just force systemd to reread configs (2.4 and above)
+  ansible.builtin.systemd_service:
+    daemon_reload: true
   notify: Start Zookeper
