--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -15,6 +15,7 @@
     - { file: '/etc/systemd/system/zookeper.service', mod: '644'}
 
 - name: Just force systemd to reread configs (2.4 and above)
-  ansible.builtin.systemd_service:
+  become: true
+  ansible.builtin.service:
     daemon_reload: true
   notify: Start Zookeper
