Rename host groups & add new zookeper local vm

--- a/setup_zookeper.yml
+++ b/setup_zookeper.yml
@@ -1,5 +1,5 @@
 - name: Setup Zookeper
-  hosts: zookeper_local
+  hosts: zookeper
   vars_files:
     - inventories/local/group_vars/kafka.yml
     - inventories/local/group_vars/vault.yml
