--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -1,11 +1,15 @@
-zookeper_local:
+zookeper:
   hosts:
     zookeper-vm0:
       ansible_host: 10.10.10.4
       ansible_user: "ivan"
       ansible_ssh_pass: "{{ local_ssh_pwd }}"
+    zookeper-vm1:
+      ansible_host: 10.10.10.5
+      ansible_user: "ivan"
+      ansible_ssh_pass: "{{ local_ssh_pwd }}"
 
-kafka_brokers_local:
+kafka_brokers:
   hosts:
     broker-vm0:
       ansible_host: 10.10.10.3
