Comment out first zoo vm

--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -1,9 +1,9 @@
 zookeper:
   hosts:
-    zookeper-vm0:
-      ansible_host: 10.10.10.4
-      ansible_user: "ivan"
-      ansible_ssh_pass: "{{ local_ssh_pwd }}"
+    # zookeper-vm0:
+    #   ansible_host: 10.10.10.4
+    #   ansible_user: "ivan"
+    #   ansible_ssh_pass: "{{ local_ssh_pwd }}"
     zookeper-vm1:
       ansible_host: 10.10.10.5
       ansible_user: "ivan"
