--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -10,8 +10,8 @@
     name: "{{ item.file }}"  
     mode: "{{ item.mod }}"
   loop:
-    - { file: '/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-start.sh', mod: '744'}
-    - { file: '/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-stop.sh', mod: '744' }
+    - { file: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/zookeeper-server-start.sh", mod: '744'}
+    - { file: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/zookeeper-server-stop.sh", mod: '744' }
     - { file: '/etc/systemd/system/zookeper.service', mod: '644'}
 
 - name: Just force systemd to reread configs (2.4 and above)
