--- a/roles/zookeper/handlers/main.yml
+++ b/roles/zookeper/handlers/main.yml
@@ -1,6 +1,6 @@
-- name: Retart Zookeper
+- name: Restart Zookeper
   become: true
   ansible.builtin.service:
     name: zookeper
     enabled: true
-    state: restarted
+    state: restarted | started
