Try setting ssh user in unit file

--- a/setup_zookeper.yml
+++ b/setup_zookeper.yml
@@ -3,5 +3,6 @@
   vars_files:
     - inventories/local/group_vars/kafka.yml
     - inventories/local/group_vars/vault.yml
+    - inventories/local/group_vars/common.yml
   roles:
     - zookeper
