--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -6,12 +6,12 @@ zookeper:
     #   ansible_ssh_pass: "{{ local_ssh_pwd }}"
     zookeper-vm1:
       ansible_host: 10.10.10.5
-      ansible_user: "ivan"
-      ansible_ssh_pass: "{{ local_ssh_pwd }}"
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
 
 kafka_brokers:
   hosts:
     broker-vm0:
       ansible_host: 10.10.10.3
-      ansible_user: "ivan"
-      ansible_ssh_pass: "{{ local_ssh_pwd }}"
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
