--- a/inventories/local/group_vars/kafka.yml
+++ b/inventories/local/group_vars/kafka.yml
@@ -1,5 +1,5 @@
 zookeper_pwd: "{{ vault_zookeper_pwd }}"
 broker_pwd: "{{ vault_broker_pwd }}"
-kafka_unzip_path: '/home/kafka/'
+kafka_unzip_path: '/usr/bin/'
 kafka_download_path: '/tmp/kafka.tgz'
 kafka_user: 'kafka'
