--- a/roles/kafka_broker/tasks/main.yml
+++ b/roles/kafka_broker/tasks/main.yml
@@ -4,6 +4,12 @@
     src: kafka-broker.service.j2
     dest: /etc/systemd/system/kafka-broker.service
 
+- name: Copy cofnig template
+  become: true
+  template:
+    src: server.properties.j2
+    dest: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/server.properties"
+
 - name: Just force systemd to reread configs (2.4 and above)
   become: true
   ansible.builtin.service:
