--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -4,6 +4,12 @@
     src: zookeper.service.j2
     dest: /etc/systemd/system/zookeper.service
 
+- name: Place zookeper config
+  become: true
+  template:
+    src: zookeper.properties.j2
+    dest: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/zookeeper.properties"
+
 - name: Just force systemd to reread configs (2.4 and above)
   become: true
   ansible.builtin.service:
