--- a/roles/zookeper/tasks/main.yml
+++ b/roles/zookeper/tasks/main.yml
@@ -4,6 +4,11 @@
     src: zookeper.service.j2
     dest: /etc/systemd/system/zookeper.service
 
+- name: Debug
+  debug:
+    var: groups[zookeper]
+
+
 - name: Place zookeper config
   become: true
   template:
