--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -1,6 +1,6 @@
-zookeper:
+zookeeper:
   hosts:
-    zookeper-vm0:
+    zookeeper-vm0:
       ansible_host: 10.10.10.6
       ansible_user: "{{ ssh_user }}"
       ansible_ssh_pass: "{{ ssh_pwd }}"
