--- a/setup_zookeper.yml
+++ b/setup_zookeper.yml
@@ -1,7 +1,7 @@
 - name: Setup Zookeper
-  hosts: zookeper
+  hosts: zookepeer
   vars_files:
     - inventories/local/group_vars/vault.yml
     - inventories/local/group_vars/common.yml
   roles:
-    - zookeper
+    - zookeeper
