--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Create unit file for Zookeper
   become: true
   template:
-    src: zookeper.service.j2
+    src: zookeeper.service.j2
     dest: /etc/systemd/system/zookeeper.service
 
 - name: Place zookeper config
