--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Place zookeper config
   become: true
   template:
-    src: zookeper.properties.j2
+    src: zookeeper.properties.j2
     dest: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/zookeeper.properties"
 
 - name: Just force systemd to reread configs (2.4 and above)
