Add create myid file for zookeeper

--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -1,3 +1,4 @@
+# IMPORTANT: all hosts should have a hostname in inventory. Otherwise config templates for raft may not work.
 zookeeper:
   hosts:
     zookeeper-vm0:
@@ -9,5 +10,34 @@ kafka_brokers:
   hosts:
     broker-vm0:
       ansible_host: 10.10.10.3
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
+kafka_brokers_raft:
+  hosts:
+    broker-raft-vm0:
+      ansible_host: 10.10.10.7
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
+    broker-raft-vm1:
+      ansible_host: 10.10.10.11
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
+kafka_controllers_raft:
+  hosts:
+    controller-raft-vm0:
+      ansible_host: 10.10.10.8
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
+    controller-raft-vm1:
+      ansible_host: 10.10.10.9
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
+    controller-raft-vm2:
+      ansible_host: 10.10.10.10
       ansible_user: "{{ ssh_user }}"
       ansible_ssh_pass: "{{ ssh_pwd }}"
