--- a/setup_kafka_broker.yml
+++ b/setup_kafka_broker.yml
@@ -4,4 +4,4 @@
     - inventories/local/group_vars/vault.yml
     - inventories/local/group_vars/common.yml
   roles:
-    - kafka_broker
+    - kafka_broker_zoo
