--- a/roles/kafka_controller_raft/tasks/main.yml
+++ b/roles/kafka_controller_raft/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: Create log catalog
   become: true
-  shell: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/kafka-storage.sh format -t {{ kafka_cluster_id }} -c {{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/kraft/servcer.properties"
+  shell: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/kafka-storage.sh format -t {{ kafka_cluster_id }} -c {{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/kraft/server.properties"
 
 - name: Force systemd to reread configs
   become: true
