--- a/setup_kafka_cluster_raft.yml
+++ b/setup_kafka_cluster_raft.yml
@@ -3,6 +3,7 @@
   vars_files:
     - inventories/local/group_vars/vault.yml
     - inventories/local/group_vars/common.yml
+    - inventories/local/group_vars/common_raft.yml
   roles:
     - kafka_controller_raft
 
@@ -11,5 +12,6 @@
   vars_files:
     - inventories/local/group_vars/vault.yml
     - inventories/local/group_vars/common.yml
+    - inventories/local/group_vars/common_raft.yml
   roles:
     - kafka_broker_raft
