--- a/roles/kafka_broker_raft/tasks/main.yml
+++ b/roles/kafka_broker_raft/tasks/main.yml
@@ -4,6 +4,12 @@
     src: server.properties.j2
     dest: "{{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/kraft/server.properties"
 
+- name: Create unit file for broker
+  become: true
+  template:
+    src: kafka-broker-raft.service.j2
+    dest: /etc/systemd/system/kafka-broker-raft.service
+
 # TEMP
 - name: Delete log catalog if exists
   become: true
