Fix broker index

--- a/roles/kafka_broker_raft/tasks/main.yml
+++ b/roles/kafka_broker_raft/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Copy controller config template
+- name: Copy broker config template
   become: true
   template:
     src: server.properties.j2
