--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -81,8 +81,13 @@
     path: "{{ kafka_download_path }}"
     state: absent
 
-- name: Put client config in kafka dir
+- name: Put admin config in kafka dir
   become: true
   template:
-    src: client-sasl.properties.j2
-    dest: "{{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/client-sasl.properties"
+    src: "{{ item.filename }}"
+    dest: "{{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/{{ item.dest_filename }}"
+  loop:
+    - { filename: 'admin-sasl.properties.j2', dest_filename: 'admin-sasl.properties' }
+    - { filename: 'user1-sasl.properties.j2', dest_filename: 'user1-sasl.properties' }
+    - { filename: 'user2-sasl.properties.j2', dest_filename: 'user2-sasl.properties' }
+    - { filename: 'user3-sasl.properties.j2', dest_filename: 'user3-sasl.properties' }
