Separate jaas config

--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -91,3 +91,9 @@
     - { filename: 'user1-sasl.properties.j2', dest_filename: 'user1-sasl.properties' }
     - { filename: 'user2-sasl.properties.j2', dest_filename: 'user2-sasl.properties' }
     - { filename: 'user3-sasl.properties.j2', dest_filename: 'user3-sasl.properties' }
+
+- name: Put jaas conf in kafka dir
+  become: true
+  template:
+    src: jaas.conf.j2
+    dest: "{{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/jaas.conf"
