--- a/inventories/local/hosts.yml
+++ b/inventories/local/hosts.yml
@@ -25,6 +25,13 @@ kafka_brokers_raft:
       ansible_user: "{{ ssh_user }}"
       ansible_ssh_pass: "{{ ssh_pwd }}"
 
+kafka_acl_manager:
+  hosts:
+    manager:
+      ansible_host: 10.10.10.7
+      ansible_user: "{{ ssh_user }}"
+      ansible_ssh_pass: "{{ ssh_pwd }}"
+
 kafka_controllers_raft:
   hosts:
     controller-raft-vm0:
