--- a/roles/kafka_acl/tasks/main.yml
+++ b/roles/kafka_acl/tasks/main.yml
@@ -8,5 +8,5 @@
 - name: Setup ACL for user1
   become: true
   ansible.builtin.shell: 
-    cmd: kafka-acls --bootstrap-server 10.10.10.7:9092 --command-config config/kraft/admin-sasl.properties --add --allow-principal User:user1 --operation WRITE --topic test-topic
+    cmd: bin/kafka-acls.sh --bootstrap-server 10.10.10.7:9092 --command-config config/kraft/admin-sasl.properties --add --allow-principal User:user1 --operation WRITE --topic test-topic
     chdir: "{{ kafka_unzip_path }}/kafka_2.12-3.8.0"
